--- a/templates/base.html
+++ b/templates/base.html
@@ -8,12 +8,31 @@
 </head>
 
 <body>
-    <header>
-        <h1><a href="{% url 'home'%}">Djano blog</a></h1>
-    </header>
     <div>
+    <header>
+     <div class= "nav-left">
+        <h1><a href="{% url 'home'%}">Djano blog</a></h1>
+     </div>
+
+     <div class="nav-right">
+        <a href="{% url 'post_new' %}">+New Blog Post</a>
+     </div>
+    </header>
+    {% if user.is_authenticated %}
+    <p>Hi {{ user.username}}!</p>
+    <form action="{% url 'logout' %}" method="post">
+        {% csrf_token %}
+        <button type="submit">Log Out</button>
+    </form>
+    {% else %}
+    <p>Yor are not logged in.</p>
+    <a href="{% url 'login' %}">Log In</a> |
+    <a href="{% url 'signup' %}">Sign Up</a>
+    {% endif %}
+    
         {% block content %}
         {% endblock content %}
     </div>
 </body>
 </html>
+
